@@ -2,5 +2,5 @@
 Title Mc Bukkit Server
 Color F
 
-java -Xms512M -Xmx1024M -jar spigot.jar
+java -Xms512M -Xmx1024M -XX:MaxPermSize=128M -jar spigot.jar
 pause
